--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <version>0.7.0</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
